# MicroService.HashAddressMapping

./: .gitignore  HashAddressMapping.txt
client/android/: settings.gradle
client/android/app/: build.gradle
client/android/app/src/main/java/com/elastos/microservice/hashaddressmapping/: ContactApi.java  Helper.java  MainActivity.java
client/android/app/src/main/res/layout/: content_main.xml
client/android/app/src/main/res/menu/: menu_main.xml
client/android/app/src/main/res/values/: strings.xml
linux/: Makefile  ReadMe.txt
server/: CMakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake  hashAddressMappingService  main.cpp
server/resource/: HashAddressMapping.txt
server/source/: HashAddressMappingService.cpp  HashAddressMappingService.h
server/source/Command/: HashAddressMappingCmd.cpp
